# pi-sniffer

./: .gitignore  .mqtt_send.c.swp  .scan.c.swp  .scan.swp  FAQ.md  FaultTolerance.md  GettingStarted.md  LICENSE  Makefile  README.md  RaspberrySetup.md  accesspoints.c  accesspoints.h  blue.py  bluetooth.c  bluetooth.h  build.sh  cgijson.c  com.signswift.sniffer.conf  config.json  device.c  device.h  heuristic-apple.c  heuristic-manufacturers.c  heuristic-names.c  heuristic-uuids.c  heuristics.h  influx.c  influx.h  kalman.c  kalman.h  knn.c  knn.h  log.sh  mqtt.c  mqtt.h  mqtt.service  mqtt_pal.c  mqtt_pal.h  mqtt_send.c  (+24 more)
.github/workflows/: manual.yml
client/: .Tpo  advertising.c  agent.c  bluetoothctl  build.sh  config.h  display.c  gatt.c  gatt.h  gdbus.h  main.c  main.c.save  mqtt.c  mqtt.h  mqtt_pal.c  mqtt_pal.h  shell.h  sniffer.Tpo
client/.deps/: advertising.Po  agent.Po  display.Po  gatt.Po  main.Po
client/src/shared/: io.h  queue.h  shell.h  util.h
docs/: Development.md  FAQ.md  GettingStarted.md  MQTT.md  RaspberrySetup.md  apache.md  beacons.md  saltstack.md  training.md
react/: .gitignore  package-lock.json  package.json
react/public/: index.html
react/src/: .App.js.swp  App.css  App.js
src/: CMakeLists.txt  cgijson.c  influx.c  knn.c  knn.h  mqtt_send.c  mqtt_send.h  report.c  scan.c  udp.c  udp.h  version.h.in  webhook.c  webhook.h  webserver.c
src/bluetooth/: bluetooth.c  bluetooth.h  heuristic-appearance.c  heuristic-apple.c  heuristic-icons.c  heuristic-mac.c  heuristic-manufacturers.c  heuristic-names.c  heuristic-uuids.c  heuristics.h  heurstic-classes.c
src/core/: cJSON.c  cJSON.h  closest.c  closest.h  http.c  http.h  influx.c  influx.h  kalman.c  knn.c  knn.h  overlaps.c  overlaps.h  serialization.c  serialization.h  udp.c  udp.h  utility.c  utility.h  webhook.c  webhook.h
src/dbus/: codegen.sh  sniffer-dbus.c  sniffer-dbus.h  sniffer-generated.c  sniffer-generated.h  sniffer.xml
src/model/: accesspoints.c  accesspoints.h  aggregate.c  aggregate.h  device.c  device.h  rooms.c  rooms.h  state.c  state.h
